# TP_Task2

./: README.txt
src/: CMakeLists.txt
src/A/: preparing.py
src/B/: CMakeLists.txt
src/C/: main.cpp
